force-app/main/default/objects/Case/fields/Dispute_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Amount__c</fullName>
    <description>The monetary amount being disputed by the customer.</description>
    <label>Dispute Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>