force-app/main/default/objects/Case/fields/Dispute_Stage__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Stage__c</fullName>
    <description>Current stage of the dispute resolution process.</description>
    <label>Dispute Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filed</fullName>
                <default>true</default>
                <label>Filed</label>
            </value>
            <value>
                <fullName>Under_Investigation</fullName>
                <label>Under Investigation</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>