force-app/main/default/objects/Case/fields/Disputed_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the financial account transaction being disputed.</description>
    <label>Disputed Transaction</label>
    <referenceTo>FinServ__FinancialAccountTransaction__c</referenceTo>
    <relationshipLabel>Dispute Cases</relationshipLabel>
    <relationshipName>Dispute_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>