force-app/main/default/objects/Case/fields/Estimated_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Resolution_Date__c</fullName>
    <description>Expected date by which the dispute will be resolved (RBI mandate: 7 working days).</description>
    <label>Estimated Resolution Date</label>
    <type>Date</type>
</CustomField>