force-app/main/default/objects/Case/fields/OCR_Extracted_Data__c.field-meta.xml
<CustomField>
    <fullName>OCR_Extracted_Data__c</fullName>
    <description>JSON data extracted by Einstein Document AI from uploaded receipt/bill images.</description>
    <label>OCR Extracted Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>