force-app/main/default/objects/Case/fields/Provisional_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Credit_Amount__c</fullName>
    <description>Amount of provisional credit issued to the customer during dispute resolution.</description>
    <label>Provisional Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>