force-app/main/default/objects/Case/fields/RM_Callback_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>RM_Callback_Scheduled__c</fullName>
    <description>Scheduled date/time for the Relationship Manager callback to the customer.</description>
    <label>RM Callback Scheduled</label>
    <type>DateTime</type>
</CustomField>