force-app/main/default/objects/Case/recordTypes/Dispute.recordType-meta.xml
<RecordType>
    <fullName>Dispute</fullName>
    <active>true</active>
    <businessProcess>Dispute Process</businessProcess>
    <description>Record type for transaction dispute cases filed by customers via TruZentra agent.</description>
    <label>Dispute</label>
</RecordType>