force-app/main/default/objects/Case/recordTypes/New_Account_Opening.recordType-meta.xml
<RecordType>
    <fullName>New_Account_Opening</fullName>
    <active>true</active>
    <businessProcess>New Account Opening Process</businessProcess>
    <description>Record type for new account opening requests created by TruZentra when a prospect has no existing account.</description>
    <label>New Account Opening</label>
</RecordType>