force-app/main/default/objects/Case/listViews/Zentra_New_Account_Requests.listView-meta.xml
<ListView>
    <fullName>Zentra_New_Account_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>New Account Opening</value>
    </filters>
    <label>New Account Requests</label>
</ListView>