force-app/main/default/objects/Case/listViews/Zentra_Transaction_Disputes.listView-meta.xml
<ListView>
    <fullName>Zentra_Transaction_Disputes</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Dispute</value>
    </filters>
    <label>Transaction Disputes</label>
</ListView>